Add scroll-line to layouts dropdown

--- a/single-element.html
+++ b/single-element.html
@@ -483,11 +483,17 @@
                                                         </a>
                                                     </li>
                                                     <li class="nav-item no_icon">
-                                                        <a href="#xaccordions-widget" class="nav-link">
+                                                        <a href="#accordion-widget" class="nav-link">
                                                             Accordions Widget
                                                             <span class="progress-indicator"></span>
                                                         </a>
                                                     </li>
+                                                    <!-- <li class="nav-item no_icon">
+                                                        <a href="#el-accordions-widget" class="nav-link">
+                                                            Accordions Widget
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
+                                                    </li> -->
                                                     <li class="nav-item no_icon">
                                                         <a href="#cheatsheet-widget" class="nav-link">
                                                             Cheatsheet Widget
@@ -564,7 +570,16 @@
                                                 </a>
                                                 <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon page-item-2746">
-                                                        <a href="#video-widget" class="nav-link">Call to action</a>
+                                                        <a href="#call-to-action-widget" class="nav-link">
+                                                            Call to action
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="nav-item no_icon page-item-2746">
+                                                        <a href="#banner-design-widget" class="nav-link">
+                                                            Banner Design
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -576,7 +591,7 @@
                             <div class="col-xl-6">
                                 <div class="content-wrapper">
                                     <section id="elements" class="elements-info-layout">
-                                        <div id="one" class="documentation-features">
+                                        <div id="documentation-features" class="documentation-features widget-area">
                                             <div class="head-title-area d-flex align-items-center">
                                                 <div class="icon">
                                                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -665,7 +680,7 @@
                                                 </p>
                                             </div>
                                         </div>
-                                        <div id="two" class="tab-widget">
+                                        <div id="tabs-widget" class="tab-widget widget-area">
                                             <div class="document-title-area">
                                                 <h3 class="title">Tabs Widget</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -780,7 +795,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div id="three" class="message-widget">
+                                        <div id="message-widget" class="message-widget widget-area">
                                             <div class="document-title-area">
                                                 <h3 class="title">Notice / Message Widget</h3>
                                                 <p class="para-text">Estimated reading: 5 minutes 808 views</p>
@@ -991,7 +1006,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div id="four" class="accordion-widget">
+                                        <div id="accordion-widget" class="accordion-widget widget-area">
                                             <div class="document-title-area">
                                                 <h3 class="title">Accordions Widget</h3>
                                                 <p class="para-text">Estimated reading: 5 minutes 808 views</p>
@@ -1162,7 +1177,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div id="five" class="cheatsheet-widget">
+                                        <div id="cheatsheet-widget" class="cheatsheet-widget widget-area">
                                             <div class="document-title-area">
                                                 <h3 class="title">Cheatsheet Widget</h3>
                                                 <p class="para-text">Estimated reading: 5 minutes 808 views</p>
@@ -1516,7 +1531,7 @@
                                             <h3 class="title">Layouts</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
                                         </div>
-                                        <div class="call-to-action-area-wrapper">
+                                        <div id="call-to-action-widget" class="call-to-action-area-wrapper widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">Call to Action</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
@@ -1579,7 +1594,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="banner-design-area">
+                                        <div id="banner-design-widget" class="banner-design-area widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">Banner Design</h3>
                                                 <p class="para-text">Estimated reading: 3 minutes 991 views</p>
