--- a/single-element.html
+++ b/single-element.html
@@ -457,9 +457,14 @@
                                                         </svg>
                                                     </div>
                                                     Elements
-                                                    <span class="arrow">
+                                                    <span class="active-arrow">
                                                         <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M10.625 6.375C10.3789 6.375 10.1602 6.29297 9.99609 6.12891L6.25 2.38281L2.47656 6.12891C2.14844 6.48438 1.57422 6.48438 1.24609 6.12891C0.890625 5.80078 0.890625 5.22656 1.24609 4.89844L5.62109 0.523438C5.94922 0.167969 6.52344 0.167969 6.85156 0.523438L11.2266 4.89844C11.582 5.22656 11.582 5.80078 11.2266 6.12891C11.0625 6.29297 10.8438 6.375 10.625 6.375Z" fill="black"/>
+                                                        </svg>
+                                                    </span>
+                                                    <span class="arrow">
+                                                        <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M6.625 7.125C6.36133 7.125 6.12695 7.03711 5.95117 6.86133L1.26367 2.17383C0.882812 1.82227 0.882812 1.20703 1.26367 0.855469C1.61523 0.474609 2.23047 0.474609 2.58203 0.855469L6.625 4.86914L10.6387 0.855469C10.9902 0.474609 11.6055 0.474609 11.957 0.855469C12.3379 1.20703 12.3379 1.82227 11.957 2.17383L7.26953 6.86133C7.09375 7.03711 6.85938 7.125 6.625 7.125Z" fill="black"/>
                                                         </svg>
                                                     </span>
                                                 </a>
@@ -513,9 +518,14 @@
                                                         </svg>
                                                     </div>
                                                     Content
-                                                    <span class="arrow">
+                                                    <span class="active-arrow">
                                                         <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M10.625 6.375C10.3789 6.375 10.1602 6.29297 9.99609 6.12891L6.25 2.38281L2.47656 6.12891C2.14844 6.48438 1.57422 6.48438 1.24609 6.12891C0.890625 5.80078 0.890625 5.22656 1.24609 4.89844L5.62109 0.523438C5.94922 0.167969 6.52344 0.167969 6.85156 0.523438L11.2266 4.89844C11.582 5.22656 11.582 5.80078 11.2266 6.12891C11.0625 6.29297 10.8438 6.375 10.625 6.375Z" fill="black"/>
+                                                        </svg>
+                                                    </span>
+                                                    <span class="arrow">
+                                                        <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M6.625 7.125C6.36133 7.125 6.12695 7.03711 5.95117 6.86133L1.26367 2.17383C0.882812 1.82227 0.882812 1.20703 1.26367 0.855469C1.61523 0.474609 2.23047 0.474609 2.58203 0.855469L6.625 4.86914L10.6387 0.855469C10.9902 0.474609 11.6055 0.474609 11.957 0.855469C12.3379 1.20703 12.3379 1.82227 11.957 2.17383L7.26953 6.86133C7.09375 7.03711 6.85938 7.125 6.625 7.125Z" fill="black"/>
                                                         </svg>
                                                     </span>
                                                 </a>
@@ -562,9 +572,14 @@
                                                         </svg>
                                                     </div>
                                                     Layouts
-                                                    <span class="arrow">
+                                                    <span class="active-arrow">
                                                         <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                             <path d="M10.625 6.375C10.3789 6.375 10.1602 6.29297 9.99609 6.12891L6.25 2.38281L2.47656 6.12891C2.14844 6.48438 1.57422 6.48438 1.24609 6.12891C0.890625 5.80078 0.890625 5.22656 1.24609 4.89844L5.62109 0.523438C5.94922 0.167969 6.52344 0.167969 6.85156 0.523438L11.2266 4.89844C11.582 5.22656 11.582 5.80078 11.2266 6.12891C11.0625 6.29297 10.8438 6.375 10.625 6.375Z" fill="black"/>
+                                                        </svg>
+                                                    </span>
+                                                    <span class="arrow">
+                                                        <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M6.625 7.125C6.36133 7.125 6.12695 7.03711 5.95117 6.86133L1.26367 2.17383C0.882812 1.82227 0.882812 1.20703 1.26367 0.855469C1.61523 0.474609 2.23047 0.474609 2.58203 0.855469L6.625 4.86914L10.6387 0.855469C10.9902 0.474609 11.6055 0.474609 11.957 0.855469C12.3379 1.20703 12.3379 1.82227 11.957 2.17383L7.26953 6.86133C7.09375 7.03711 6.85938 7.125 6.625 7.125Z" fill="black"/>
                                                         </svg>
                                                     </span>
                                                 </a>
