Add add changelog timeline

--- a/single-element.html
+++ b/single-element.html
@@ -617,7 +617,7 @@
                                                 </a>
                                                 <ul class="list-unstyled dropdown_nav">
                                                     <li class="nav-item no_icon">
-                                                        <a href="#change-logs-widget" class="nav-link">
+                                                        <a href="#change-log-widget" class="nav-link">
                                                             Change Logs
                                                             <span class="progress-indicator"></span>
                                                         </a>
@@ -637,6 +637,12 @@
                                                     <li class="nav-item no_icon">
                                                         <a href="#plugin-installation-widget" class="nav-link">
                                                             Plugin Installation
+                                                            <span class="progress-indicator"></span>
+                                                        </a>
+                                                    </li>
+                                                    <li class="nav-item no_icon">
+                                                        <a href="#changelogs-timeline-widget" class="nav-link">
+                                                            Changelogs Timeline 
                                                             <span class="progress-indicator"></span>
                                                         </a>
                                                     </li>
@@ -1744,7 +1750,6 @@
                                             <h3 class="title">Change Logs</h3>
                                             <p class="para-text">Effortless Online Documentation WordPress Theme, the Way It Should Be</p>
                                         </div>
-
                                         <div id="change-log-widget" class="change-log-widget widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">Change Logs</h3>
@@ -2080,12 +2085,11 @@
                                                 </div>
                                             </div>
 
-                                            <div class="main-heading-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                            <div class="widget-title-area mb-0 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                                 <h3 class="title">Changelogs Timeline</h3>
                                                 <p class="para-text">Give custom category/single post slug name for your documentation.</p>
                                             </div>
                                         </div>
-
                                         <div id="depth-widget" class="depth-widget widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">One Depth</h3>
@@ -2103,9 +2107,9 @@
                                                 <p class="para-text">Give custom category/single post slug name for your documentation.</p>
                                             </div>
 
-                                            <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                            <div class="widget-title-area mb-0 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title list-title">If you have never set-up a Gravatar account:</h3>
-                                                <ol>
+                                                <ol class="mb-0">
                                                     <li>
                                                         <div class="para-text">
                                                             Register/login to Gravatar. Upon registering, use the SAME email address that is associated with your WordPress User Profile.
@@ -2118,9 +2122,11 @@
                                                     </li>
                                                 </ol>
                                             </div>
+                                        </div>
+                                        <div id="demo-import-widget" class="demo-import-widget widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
-                                                <h3 class="title">Demo Import</h3>
-                                                <p class="para-text">
+                                                <h3 class="title mb-2">Demo Import</h3>
+                                                <p class="para-text mb-4">
                                                     Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor nunc semper. Ornare non nulla faucibus pulvinar vulputate neque. The as Suscipit the tristique nam enim mauris consectetur platea.
                                                 </p>
                                                 <p class="para-text">
@@ -2128,19 +2134,125 @@
                                                 </p>
                                             </div>
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
-                                                <h3 class="title">After Demo Import</h3>
+                                                <h3 class="title mb-2">After Demo Import</h3>
                                                 <p class="para-text">
                                                     Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor nunc semper. Ornare non nulla faucibus pulvinar vulputate neque. The as Suscipit the tristique mauris consectetur platea.
                                                 </p>
                                             </div>
+                                            <div class="widget-title-area mb-0 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                <h3 class="title mb-2">An alternative method to import the demo content.</h3>
+                                                <p class="para-text">
+                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor nunc semper. Ornare non nulla faucibus pulvinar vulputate neque. The as Suscipit the tristique mauris consectetur platea.
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div id="plugin-installation-widget" class="plugin-installation-widget widget-area">
                                             <div class="widget-title-area wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                <h3 class="title mb-2">Plugin Installation</h3>
+                                                <p class="para-text mb-4">
+                                                    Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor nunc semper. Ornare non nulla faucibus pulvinar vulputate neque. The as Suscipit the tristique nam enim mauris consectetur platea.
+                                                </p>
+                                                <p class="para-text">
+                                                    The Cras aliquet accumsan. Egestas ut eget egestas as ultrices diam. Sem fusce that a pretium a commodo pellente in pretium tincidunt.
+                                                </p>
+                                            </div>
+                                            <div class="widget-title-area mb-0 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 <h3 class="title">An alternative method to import the demo content.</h3>
                                                 <p class="para-text">
                                                     Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor nunc semper. Ornare non nulla faucibus pulvinar vulputate neque. The as Suscipit the tristique mauris consectetur platea.
                                                 </p>
                                             </div>
-
-                                            
+                                        </div>
+                                        <div id="changelogs-timeline-widget" class="changelogs-timeline-widget widget-area">
+                                            <div class="widget-title-area mb-0 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                                <h3 class="title mb-2">Change logs Timeline</h3>
+                                            </div>
+                                            <p class="para-text mb-4">
+                                                Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor nunc semper. Ornare non nulla faucibus pulvinar vulputate neque. The as Suscipit the tristique nam enim mauris consectetur platea.
+                                            </p>
+                                            <p class="para-text mb-4">
+                                                The Cras aliquet accumsan. Egestas ut eget egestas as ultrices diam. Sem fusce that a pretium a commodo pellente in pretium tincidunt.
+                                            </p>
+                                            <div class="changelogs-timeline-area">
+                                                <div class="row parent">
+                                                    <div class="col-xl-3 child">
+                                                        <div class="timeline-content">
+                                                            <h3 class="year text-center">2011</h3>
+                                                            <ul class="data-list">
+                                                                <li class="data-item">
+                                                                    <h4>January</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>September</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>December</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xl-3 child">
+                                                        <div class="timeline-content">
+                                                            <h3 class="year text-center">2012</h3>
+                                                            <ul class="data-list">
+                                                                <li class="data-item">
+                                                                    <h4>April</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>Augast</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>November</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xl-3 child">
+                                                        <div class="timeline-content">
+                                                            <h3 class="year text-center">2013</h3>
+                                                            <ul class="data-list">
+                                                                <li class="data-item">
+                                                                    <h4>February</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>March</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>October</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-xl-3 child">
+                                                        <div class="timeline-content">
+                                                            <h3 class="year text-center">2014</h3>
+                                                            <ul class="data-list">
+                                                                <li class="data-item">
+                                                                    <h4>January</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>September</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                                <li class="data-item">
+                                                                    <h4>December</h4>
+                                                                    <p class="para-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </section>
 
